# Formality-Haskell

./: .gitignore  .gitmodules  LICENSE  Net.md  README.md  formality-haskell.cabal  stack.yaml
app/: Fide.hs  Graph.hs  HaskelineT.hs  Main.hs
fide/: Fide.hs  HaskelineT.hs  Main.hs
graphviz/: Graph.hs  inConCon.dot  inConDup.dot  inConEra.dot  outConCon.dot  outConDup.dot  outConEra.dot
src/: Check.hs  Core.hs  CoreSyn.hs  ElementaryAffineCore.hs  ElementaryAffineNet.hs  ElementaryAffineTypeTheory.hs  Equality.hs  FirstOrder.hs  FormalityCore.hs  FormalityNet.hs  IEEE754.hs  Lang.hs  Parser.hs  Pretty.hs  SimplerCore.hs  Unify.hs  test.hs
src/ElementaryAffineCore/: Parser.hs  StratificationChecker.hs  Substitutor.hs  Types.hs
src/ElementaryAffineNet/: Compiler.hs
src/Parser/: Lang.hs  PreModule.hs  Types.hs
src/Runtime/: INet.hs  INode.hs  Net.hs
test/: Nets.hs  Spec.hs
test/Spec/: Core.hs  Lang.hs  Net.hs  Parser.hs
test/Spec/Parser/: Lang.hs  PreModule.hs  Utils.hs
