name:                formality-haskell
version:             0.1.0.0
homepage:            https://gitlab.com/moonad/formality-haskell#readme
author:              John C. Burnham
license:             MIT
license-file:        LICENSE
maintainer:          john@sunshinecybernetics.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  default-language: Haskell2010
  hs-source-dirs: src
  exposed-modules:   Runtime.Net
                     Core
                     Lang
  build-depends:
    base
    , containers
    , transformers
    , megaparsec
    , mtl
    , text
    , vector
  default-extensions: OverloadedStrings, MultiWayIf

executable fm
  main-is: Main.hs
  build-depends:
    base
    , containers
    , transformers
    , megaparsec
    , mtl
    , text
    , vector
    , process
    , repline
  other-modules: Core
                 Lang
  default-extensions: OverloadedStrings, MultiWayIf
  hs-source-dirs: app src

test-suite test
  type: exitcode-stdio-1.0
  default-language: Haskell2010
  main-is: Spec.hs
  hs-source-dirs: test src
  build-depends:
      base
    , containers
    , transformers
    , hspec
    , QuickCheck
    , megaparsec
    , text
    , vector
    , crackNum
    , mtl
  default-extensions: OverloadedStrings, MultiWayIf
  other-modules: Runtime.Net
                , Spec.Lang
                , Spec.Net
                , Core
                , Lang

