name:                formality-haskell
version:             0.1.0.0
homepage:            https://gitlab.com/moonad/formality-haskell#readme
author:              John C. Burnham
license:             MIT
license-file:        LICENSE
maintainer:          john@sunshinecybernetics.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  default-language: Haskell2010
  hs-source-dirs: src
  exposed-modules:   Runtime.Net
                     Core
                     Lang
                     Parser
                     Parser.PreModule
                     Parser.Lang
                     Parser.Types
                     CoreSyn
                     Check
                     Pretty
                     IEEE754
  build-depends:
    base
    , containers
    , transformers
    , megaparsec
    , mtl
    , text
    , vector
    , logict
    , equivalence
    , cereal
    , bytestring
    , ieee754
    , numeric-extras
  default-extensions: OverloadedStrings, MultiWayIf, PatternGuards

--executable fide
--  main-is: Main.hs
--  build-depends:
--    base
--    , containers
--    , transformers
--    , megaparsec
--    , mtl
--    , text
--    , vector
--    , process
--    , repline
--    , haskeline
--  other-modules: Core
--                 Lang
--                 Fide
--                 Check
--                 Pretty
--                 HaskelineT
--  default-extensions: OverloadedStrings, MultiWayIf, PatternGuards
--  hs-source-dirs: fide src

test-suite test
  type: exitcode-stdio-1.0
  default-language: Haskell2010
  main-is: Spec.hs
  hs-source-dirs: test src
  build-depends:
      base
    , containers
    , transformers
    , hspec
    , QuickCheck
    , megaparsec
    , text
    , vector
    , crackNum
    , mtl
    , ieee754
    , cereal
    , bytestring
    , numeric-extras
    , raw-strings-qq
  default-extensions: OverloadedStrings, MultiWayIf, PatternGuards
  other-modules: Runtime.Net
                , Spec.Parser
                , Spec.Parser.Lang
                , Spec.Parser.PreModule
                , Spec.Parser.Utils
                , Spec.Net
                , Spec.Core
                , Core
                , CoreSyn
                , Lang
                , Check
                , Pretty
                , Parser
                , Parser.PreModule
                , Parser.Lang
                , Parser.Types
                , IEEE754

